deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plat-team
spec:
  type: ClusterIP
  selector:
    app: plat-team
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
